--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
       background:#000;
     }
 
-    .bg{
+    /* Vídeo de fundo */
+    .bg-video{
       position:fixed;
-      inset:0;
-      background:url("https://xatimg.com/image/fB6gn8boerP2.gif") center/cover no-repeat;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      object-fit:cover;
       z-index:0;
     }
     .overlay{
@@ -148,7 +152,10 @@
   </style>
 </head>
 <body>
-  <div class="bg"></div>
+  <!-- Vídeo de fundo -->
+  <video class="bg-video" autoplay muted loop playsinline>
+    <source src="https://cdn.pixabay.com/video/2023/11/28/191252-890894246_large.mp4" type="video/mp4">
+  </video>
   <div class="overlay"></div>
 
   <main class="stage">
@@ -166,7 +173,7 @@
   </footer>
 
   <script>
-    // Parallax inverso (texto segue lentamente em sentido contrário do mouse)
+    // Parallax inverso
     const title = document.getElementById('title');
     const subtitle = document.getElementById('subtitle');
     const glass = document.getElementById('glass');
