--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <style>
     :root{
       --glass-border: rgba(255,255,255,0.18);
-      --text-shadow: 0 6px 28px rgba(2,6,23,0.45);
     }
 
     *{box-sizing:border-box}
@@ -78,17 +77,34 @@
       font-size:clamp(48px, 10vw, 100px);
       margin:0;
       text-transform:uppercase;
-      color:#fff; /* branco puro */
-      text-shadow:var(--text-shadow);
       cursor:pointer;
       transform:translate3d(0,0,0);
       will-change:transform;
       animation: float 4s ease-in-out infinite;
+      
+      /* Degradê animado */
+      background: linear-gradient(270deg, #735C19, #BF923F, #40280B, #734A19);
+      background-size: 400% 400%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: float 4s ease-in-out infinite, gradientShift 12s linear infinite;
+
+      /* Glow black de contorno */
+      text-shadow:
+        -2px -2px 4px rgba(0,0,0,0.9),
+         2px -2px 4px rgba(0,0,0,0.9),
+        -2px  2px 4px rgba(0,0,0,0.9),
+         2px  2px 4px rgba(0,0,0,0.9);
     }
 
     @keyframes float {
       0%,100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 100% 50%; }
     }
 
     p.subtitle{
